# pycglib

./: CMakeLists.txt  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
cgal/: distance.cpp
src/pycglib/: __init__.py  wrapper.cpp
src/pycglib/core/: aff_transformation2.cpp  aff_transformation2.h  aff_transformation3.cpp  aff_transformation3.h  bbox2.cpp  bbox2.h  circle2.cpp  circle2.h  circle3.cpp  circle3.h  delaunay2.cpp  delaunay2.h  direction2.cpp  direction2.h  global_functions.cpp  global_functions.h  line2.cpp  line2.h  orientation.h  plane3.cpp  plane3.h  point3.cpp  point3.h  points.cpp  points.h  polygon2.cpp  polygon2.h  ray2.cpp  ray2.h  segment2.cpp  segment2.h  sphere3.cpp  sphere3.h  tetrahedron3.cpp  tetrahedron3.h  triangle2.cpp  triangle2.h  triangle3.cpp  triangle3.h  types.h  (+2 more)
src/pygeometry/: __init__.py  wrapper.cpp
